# minigpt

./: .gitignore  README.md  main.py  model.py  pyproject.toml
layers/: __init__.py  bpe.py  embedding.py  feed_forward.py  multi_headed_attention.py  transformer.py
params/: model_params.py
