[project]
name = "minigpt2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "fire>=0.7.0",
    "numpy>=2.1.3",
    "regex>=2024.11.6",
    "tensorflow>=2.19.0",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
